# rdc-blga

./: .gitignore  .pylintrc  CMakeLists.txt  Milestones.md  ProjectHome.md  blgaMain.cpp  cmake_uninstall.cmake.in  install.sh  picos_p2.txt
blga/carlosFitnessFunctions/: FitnessFunction.cpp  FitnessFunction.h  FitnessStopC.cpp  FitnessStopC.h  HumpFunction.cpp  HumpFunction.h  NFEsStopC.cpp  NFEsStopC.h  NRestartsSC.cpp  NRestartsSC.h  PeriodicEqual.h  Random.cpp  StopCondition.cpp  StopCondition.h
blga/localSearchers/: Blga.cpp  Blga.h  BlgaClustering.cpp  BlgaSharing.h  ClusteredClearing.cpp  ClusteredClearing.h  FastBlga.h  LocalSearcher.cpp  LocalSearcher.h
blga/resultWriter/: blgajsonrw.cpp  blgajsonrw.h  resultwriter.cpp  resultwriter.h
docs/: Makefile  conf.py  index.rst
docs/source/: blga.rst  blgajsonrw.rst  classes.rst  clusteredclearing.rst  fitnessfunction.rst  humpfunction.rst  localsearcher.rst  periodicequal.rst  periodicunequal.rst  resultwriter.rst
flex/Others/: numPP1.flex  numPP2.flex
flex/peakNumber/: PeakCounter.flex  PeakNumHump.flex  PeakNumP1.flex  PeakNumP2.flex
flex/popDistribution/: HumpPopDis.flex  P1PopDis.flex  P2PopDis.flex  PopDistribution.flex
flex/processResultFiles/: ProcessHumpResults.flex  ProcessP1P2Results.flex  ProcessToWxMaxima.flex  wxMaximaCommands.txt
pyblga/: __init__.py  blgagui.py  pip-requires
pyblga/blga/: __init__.py  runner.py
pyblga/common/: __init__.py  exception.py  rdc_utils.py
pyblga/data/: __init__.py  base_models.py  fileinout.py  jsoncol.py  models.py
pyblga/data/apis/: __init__.py  parameters.py  results.py  runs.py  searchers.py
pyblga/data/models/: parameters.py  results.py  runs.py  searchers.py
pyblga/gui/: models.py
pyblga/gui/dialogs/: run_dialog.py  run_dialog.ui
pyblga/static/: resources.qrc
pyblga/static/html/: help.html
pyblga/tests/: __init__.py  sampledata.py
pyblga/tests/unittest/: __init__.py  long_blga_runs.py  test_blga_runner.py  test_parameters_api.py  test_results_api.py  test_runs_api.py  test_searchers.py  test_searchers_api.py
pyblga/tools/: install_venv.py  pip-requires  pyqtenv.sh  with_venv.sh
src/carlosFitnessFunctions/: FitnessFunction.h  HumpFunction.cpp  HumpFunction.h  PeriodicEqual.cpp  PeriodicEqual.h  PeriodicUnequal.cpp  PeriodicUnequal.h  Random.h
src/carlosFitnessFunctions/peakGen/: CMakeLists.txt  peakGenMain.cpp
src/localSearchers/: Blga.cpp  BlgaClearing.cpp  BlgaClearing.h  BlgaClustering.cpp  BlgaClustering.h  BlgaSharing.cpp  BlgaSharing.h  ClusteredClearing.cpp  ClusteredClearing.h  FastBlga.cc  LocalSearcher.h
tests/: CMakeLists.txt  humpFunctionConfig
tests/cpp-tests/: CMakeLists.txt  fitnesstest.cpp  peaks19  resultwritertest.cpp
tests/unittest/: fitnesstest.cpp  resultwritertest.cpp
